--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-media-hook": "^0.4.9",
     "react-scripts": "^4.0.2",
     "reactstrap": "^8.9.0",
     "smooth-scroll": "^16.1.3"
